src/objects/authentication__c.object
<CustomObject>
    <description>this authentication for users in this App</description>
    <fields>
        <fullName>address__c</fullName>
        <label>address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>firstname__c</fullName>
        <label>firstname</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastname__c</fullName>
        <label>lastname</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>occupation__c</fullName>
        <label>occupation</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone_no__c</fullName>
        <label>phone_no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>authentication</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>h-{000}</displayFormat>
        <label>authentication id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>authentications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>